kubernetes/rtpengine-worker.yaml

# worker
apiVersion: apps/v1
kind: Deployment
metadata:
  name: l7mp-worker
  labels:
    app: l7mp-worker
spec:
  # replicas: 2
  replicas: 1
  selector:
    matchLabels:
      app: l7mp-worker
  template:
    metadata:
      labels:
        app: l7mp-worker
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      volumes:
        - name: l7mp-config-volume
          configMap:
            name: l7mp-worker-config
        - name: rtpengine-config-volume
          configMap:
            name: rtpengine-config
        - name: kernel-debug
          hostPath:
            path: /sys/kernel/debug
            type: Directory
      containers:
      # sidecar
      - name: l7mp
        image: l7mp/l7mp:latest
        imagePullPolicy: IfNotPresent
        # command: ["/bin/sh"]
        # args: ["-c", "while true; do echo hello; sleep 10;done"]
        command: [ "node" ]
        args: [ "l7mp-proxy.js", "-c", "config/l7mp-worker.yaml", "-s", "-l", "info" ]
        ports:
        - containerPort: 1234
        volumeMounts:
          - name: l7mp-config-volume
            mountPath: /app/config
      - name: rtpengine
        image: drachtio/rtpengine
        imagePullPolicy: IfNotPresent
        # command: ["/bin/sh"]
        # args: ["-c", "while true; do echo hello; sleep 10;done"]
        command: [ "/usr/local/bin/rtpengine" ]
        args: [ "--config-file=/etc/rtpengine/rtpengine.conf", "-i", "lo", "-f", "-L", "7", "-E" ]
        volumeMounts:
          - name: rtpengine-config-volume
            mountPath: /etc/rtpengine

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: l7mp-worker
  name: l7mp-worker
spec:
  ports:
  - port: 1234
    name: http-control-port
    protocol: TCP
    targetPort: 1234
  - port: 19000
    name: worker-rtp-service-port
    protocol: UDP
    targetPort: 19000
  - port: 19000
    name: worker-rtcp-service-port
    protocol: UDP
    targetPort: 19001
  - port: 22222
    name: udp-rtpengine-ng-port
    protocol: UDP
    targetPort: 22222
  selector:
    app: l7mp-worker
  type: ClusterIP

---

# rtpengine-ng

apiVersion: l7mp.io/v1
kind: VirtualService
metadata:
  name: udp-ingress-rtpengine-ng
spec:
  selector:
    matchLabels:
      app: l7mp-ingress
  listener:
    spec:
      UDP:
        port: 22222
    rules:
      - action:
          route:
            destinationRef: udp-ingress-rtpengine-ng-target

---

apiVersion: l7mp.io/v1
kind: VirtualService
metadata:
  name: udp-worker-rtpengine-ng
spec:
  selector:
    matchLabels:
      app: l7mp-worker
  listener:
    spec:
      UDP:
        port: 22222
    rules:
      - action:
          route:
            destinationRef: udp-worker-rtpengine-ng-target
